manifests/loki-log/templates/grafana-loki-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-loki-ing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  rules:
    - host: n2app-longhorn.pea.co.th
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-log-grafana
                port:
                  number: 3000
